@@ -8,7 +8,7 @@
     "Dependencies" : [
         {
             "Name":"Briv Gem Farm",
-            "Version":"v1.0."
+            "Version":"v1.3.0"
         }
     ]
 }
